# sbepistats

./: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
sbepistats/: Cargo.toml
sbepistats/src/: bevy_auto_plugin.rs  lib.rs
sbepistats/tests/: bevy_auto_plugin.rs  derived_stat.rs  stats.rs
sbepistats_derive/: Cargo.toml
sbepistats_derive/src/: derive_stat_type.rs  lib.rs
