[package]
name = "sbepistats"
version = "0.1.0"
edition = "2024"
rust-version = "1.92.0"  # Follows bevy 0.18
description = "A Minecraft-inspired stat system for Bevy"
repository = "https://github.com/DragonFoxCollective/sbepistats"
license = "MIT OR Apache-2.0"
keywords = ["bevy", "stats"]
categories = ["game-development"]

[dependencies]
bevy = { version = "0.18", default-features = false }
bevy_auto_plugin = { version = "0.10.0", optional = true }
num-traits = "0.2.19"
paste = "1.0.15"
sbepistats_derive = { path = "../sbepistats_derive", version = "0.1.0" }

[dev-dependencies]
bevy = "0.18"

[features]
default = []
bevy_auto_plugin = ["dep:bevy_auto_plugin"]

[lints.clippy]
type_complexity = "allow"
