[package]
name = "sbepistats_derive"
version = "0.1.0"
edition = "2024"
description = "Procedural macros for sbepistats"
repository = "https://github.com/DragonFoxCollective/sbepistats"
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.103"
quote = "1.0.41"
syn = { version = "2.0.106", features = ["extra-traits", "full"] }
